# aconv

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md
src/: cli.rs  constants.rs  error.rs  guess.rs  lib.rs  main.rs  option.rs  transcode.rs  transcoder.rs
src/transcoder/: constants.rs  mod.rs
test_data/: big5_zh_CHT.txt  euc-jp_ja.txt  gb18030_zh_CHS.txt  iconv.sh  iso-2022-jp_ja.txt  koi8-r_ru.txt  sjis_ja.txt  utf16be_th.txt  utf16le_BOM_th.txt  utf16le_th.txt  utf8_en.txt  utf8_es.txt  utf8_ja.txt  utf8_ko.txt  utf8_ru.txt  utf8_th.txt  utf8_zh_CHS.txt  windows-1252_es.txt
test_data/dir_to_dir/: parent1.txt  parent2.txt
test_data/dir_to_dir/child/: child1.txt  child2.txt
test_data/error_guess_dir/: nullchars.txt  nullchars2.txt
test_data/threshold/: threshold.txt
test_data/to_code/: eucjp_to_sjis.txt  sjis.txt
test_data/transcode/: euc-kr_ko.txt  utf16be_BOM_th.txt  utf8_zh_CHT.txt
tests/: cli.rs
tests/snapshots/: cli__error_guess-2.snap  cli__error_guess_dir_stderr.snap  cli__error_guess_dir_stdout.snap  cli__error_guess_file_quiet_stdout.snap  cli__error_guess_file_stderr.snap  cli__error_guess_quiet-2.snap  cli__error_guess_stderr.snap  cli__error_guess_stdout.snap  cli__error_noent.snap  cli__list.snap  cli__show.snap  cli__version.snap
transcoding_rs/: Cargo.toml  LICENSE-APACHE  README.md
transcoding_rs/src/: constants.rs  i18n_reader.rs  lib.rs  transcoder.rs  transcoding_reader.rs
