[package]
name = "transcoding_rs"
version = "0.1.1"
edition = "2018"
authors = ["kena0ki"]
license = "MIT OR Apache-2.0"
description = "Converts text encoding the easy and efficient way"
repository = "https://github.com/kena0ki/aconv/tree/main/transcoding_rs"
keywords = ["encoding", "unicode", "i18n", "CJK", "reader"]
categories = ["encoding", "text-processing", "internationalization"]
readme = "README.md"

[dependencies]
chardetng = "0.1.14"
encoding_rs = { version = "0.8.28", features = ["fast-legacy-encode"] }

